# MLXInference

./: .gitignore  README.md  pyproject.toml
artifacts/benchmarks/2026-07-02/: bad-benchmark-negative.txt  benchmark-output.txt  qwen25-05b-benchmark.json
artifacts/reviews/2026-07-02/: code-review.md  gate-review.md  manual-qa.md
artifacts/verification/2026-07-02/: compileall.txt  env-capture-output.txt  env.json  final-gate-negative.json  final-gate-output.txt  final-report.md  final-unit-component-junit.xml  final-unit-component-output.txt  forbidden-generate-rg.txt  fresh-unit-component-junit.xml  import-smoke.txt  owned-decode.txt  paged-cache-negative.txt  parity-output.txt  post-cache-unit-component-output.txt  post-clean-unit-component-output.txt  pytest-collect-only.txt  quality-gate.json  runtime-edge-negative.txt  scheduler-budget-negative.txt  scheduler-replay.txt  unit-component-junit.xml  unit-component-output.txt
docs/: INDEX.md  architecture.md  optimization-design.md
scripts/verify/: assert_owned_decode.py  benchmark_runtime.py  capture_env.py  capture_parity_run.py  capture_scheduler_trace.py  final_gate.py  replay_scheduler_trace.py  validate_benchmark_json.py
src/mlx_inference/cache/: __init__.py  policy.py
src/mlx_inference/cli/: __main__.py  generate.py
tests/: conftest.py
tests/component/: test_cache_policy.py  test_cli_and_scripts.py  test_greedy_decode.py  test_owned_decode_static.py  test_scheduler_generation.py  test_step_decode.py
tests/fixtures/: bad_benchmark.json  scheduler_over_budget.jsonl
tests/unit/: test_ops.py
(+31 files in other folders)
